# book-management

./: .gitignore  Makefile  README.md  compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: de4127aac1d2_create_food_items_table.py
backend/app/: crud.py  database.py  google_books.py  main.py  models.py  schemas.py
backend/app/core/: auth.py  database.py  email.py
backend/app/crud/: __init__.py  book.py  emergency.py  food_item.py  user.py
backend/app/models/: book.py  emergency.py  food_item.py  notification.py  user.py
backend/app/routers/: __init__.py  __inti__.py  auth.py  book.py  emergency.py  food_item.py  notification.py  recommendation.py  user.py
backend/app/schemas/: __init__.py  book.py  emergency.py  food_item.py  user.py
backend/app/services/: google_books.py  hybrid_recipe.py  recipe_chatgpt.py  utils.py  validate_category.py
backend/app/services/notification/: logic.py  scheduler.py  wishlist.py
backend/app/utils/: token.py
backend/scripts/: manual_notify.py
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/constants/: images.ts
frontend/src/hooks/: useBarcodeScanner.tsx
frontend/src/pages/: AddBookPage.tsx  BarcodeScanPage.tsx  BookDetailPage.tsx  BooksPage.tsx  FoodExpiryPage.tsx  FoodPages.tsx  ForgotPasswordPage.tsx  HomePage.tsx  LoginPage.tsx  PrivacyPage.tsx  RecipePage.tsx  RegisterFoodPage.tsx  RegisterPage.tsx  (+7 more)
(+17 files in other folders)
